Added teacher role

--- a/frontend/PhyLab_user_page.html
+++ b/frontend/PhyLab_user_page.html
@@ -253,16 +253,23 @@
                 required
               />
 
-              <label>Student ID</label>
+              <label style="transition: opacity 0.3s ease">Student ID</label>
               <input
                 type="text"
                 id="user-id"
                 placeholder="Enter your ID"
                 required
+                style="transition: opacity 0.3s ease"
               />
 
-              <label>Teacher's Name</label>
-              <select id="teacher-name" required>
+              <label style="transition: opacity 0.3s ease"
+                >Teacher's Name</label
+              >
+              <select
+                id="teacher-name"
+                required
+                style="transition: opacity 0.3s ease"
+              >
                 <option value="">-- Select teacher --</option>
               </select>
 
@@ -308,7 +315,7 @@
             </svg>
           </div>
           <h2 id="display-fullname">User Name</h2>
-          <p id="display-role">Student</p>
+          <p id="display-role">User</p>
         </div>
         <div class="profile-info">
           <div class="info-item">
