--- a/frontend/PhyLab_admin_page.html
+++ b/frontend/PhyLab_admin_page.html
@@ -367,6 +367,83 @@
               Previously completed and returned requests
             </p>
           </div>
+
+          <!-- Export Controls -->
+          <div class="export-controls-panel">
+            <div class="export-header">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                <polyline points="7 10 12 15 17 10"></polyline>
+                <line x1="12" y1="15" x2="12" y2="3"></line>
+              </svg>
+              <h3>Export Borrower Report</h3>
+            </div>
+            <div class="export-filters">
+              <div class="filter-group">
+                <label for="exportFromDate">From Date</label>
+                <input type="date" id="exportFromDate" class="date-input" />
+              </div>
+              <div class="filter-group">
+                <label for="exportToDate">To Date</label>
+                <input type="date" id="exportToDate" class="date-input" />
+              </div>
+              <div class="filter-group">
+                <label for="exportStatus">Status Filter</label>
+                <select id="exportStatus" class="status-filter">
+                  <option value="">All Statuses</option>
+                  <option value="pending">Pending</option>
+                  <option value="approved">Approved</option>
+                  <option value="borrowed">Borrowed</option>
+                  <option value="returned">Returned</option>
+                  <option value="rejected">Rejected</option>
+                </select>
+              </div>
+              <button class="export-btn" onclick="exportBorrowerReport()">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="18"
+                  height="18"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+                  <polyline points="7 10 12 15 17 10"></polyline>
+                  <line x1="12" y1="15" x2="12" y2="3"></line>
+                </svg>
+                Export to Excel
+              </button>
+            </div>
+            <div class="export-info">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <circle cx="12" cy="12" r="10"></circle>
+                <line x1="12" y1="16" x2="12" y2="12"></line>
+                <line x1="12" y1="8" x2="12.01" y2="8"></line>
+              </svg>
+              <span
+                >Export generates a detailed Excel report with borrower
+                information, items, and dates.</span
+              >
+            </div>
+          </div>
+
           <div class="history-container" id="adminHistoryContainer">
             <div style="padding: 20px; color: #666">Loading history...</div>
           </div>
